--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -24,7 +24,7 @@ abstract: |
   These MPM construction issues are treated extensively in textbooks, so their existence in current literature is surprising. 
   To quantify the prevalence of such errors we examined and scored the original publications underlying the models in the COMADRE Animal Matrix Database **[add sample sizes (MPMs, species, studies)]**. 
   The first two errors were found in 41% and 42%, respectively, of the published studies; all were in models that used a “post-breeding census” representation of the life cycle (in which newborns [eggs, neonates, fledglings, etc.] are explicitly included). 
-  Of the studies where stages may last longer than one time step, 25% constructed the growth rate using inappropriate formulas, and 37% used methods that were either undescribed or would generate the correct development time only if the population remained at the observed age-within-stage structure. 
+  Of the studies where stages may last longer than one time step, 25% constructed the maturation rate using inappropriate formulas, and 37% used methods that were either undescribed or would generate the correct development time only if the population remained at the observed age-within-stage structure. 
   These results suggest that further efforts may be required to educate biologists on the construction of MPMs, perhaps in concert with the development of new software tools. 
   Furthermore, the conclusions of many studies that are based on MPMs may need to be re-examined, and synthetic studies using the COMADRE Database need to be accompanied by careful examination of the underlying studies.
 
@@ -394,7 +394,7 @@ Some discover a predecessor to the above Crowder et al. approach that appears in
 This formula is complex-looking but straightforward to calculate, as it doesn't require iteration (it incorporates the within-cohort dynamics, but *assumes* that $\lambda_1 = 1$).
 We will refer to this as the "stationary age-within-stage structure" (SAS) model (where "stationary" means that the population is neither growing nor declining).
 
-An even simpler approach is to say that, if the desired duration of stage $i$ is $T_i$ timesteps, then the fraction maturing is $1/T_i$ (@Caswell2001). 
+An even simpler approach is to say that, if the desired duration of stage $i$ is $T_i$ timesteps, then the fraction maturing is $1/T_i$ [@Caswell2001]. 
 This relationship between the mean residence time (stage duration) and the fraction departing (maturing) is true for a simple Markovian departure process [e.g., @Gallager1995]. 
 However, for the population process, different number of individuals are entering into the stage as a population may be growing or declining and individuals can also die before maturing. 
 Consequently, this particular relationship between the mean duration and fraction maturing is correct under asymptotic conditions if $\sigma_i / \lambda_1 = 1$.
@@ -416,25 +416,25 @@ We approach this evaluation through theoretical analysis (where feasible and inf
 These studies made all three of the errors described above; we singled them out not because they are particularly egregious (many other studies make these errors) but because the authors did an exceptional job of describing the species' life history, allowing us to infer the model they meant to construct.
 We started with the original matrices as "baseline" models, and constructed models that fixed one, two, or three of the focal errors to see how these errors affect the model projections and conclusions.
 
-A matrix population model for lionfish was constructed by @Morris2011 to investigate the potential approaches for controlling the invasive species. 
+A matrix population model for lionfish was constructed by @Morris2011 to investigate the potential approaches for controlling this invasive species. 
 The modeled life history consists of three stages (larvae, juvenile, and adult), and time step of the model was one month. The original model was a post-breeding census model, but it did not include the survival of adults in the fertility rate. 
-The average duration of the juvenile stage was assumed to be 12 months in the model. 
-This meant they take 14 months for the first reproduction (one month in larvae stage, 12 months in juvenile stage, and one additional month in fertility rate) even though they start reproducing in 12 months. 
-The authors used FAS model for calculating the transition rates for juveniles. 
-We developed four stage-structured population models that gradually correct for some or all of these problems and three age-structured matrices, of which two of them include the original errors associated with fertility coefficient (Supplementary Material). 
-Along with the original models, we used the eight models to calculate $\lambda_1$, stable stage distribution, reproductive value, sensitivity and elasticity of $\lambda_1$ to stage-specific survival rate and fecundity, damping ratio, and generation time (Supplementary Material). 
+The average duration of the juvenile stage was assumed to be 12 months in the model, and the fertility coefficient for juveniles was set to zero. 
+This meant that the modeled lionfish take 14 months to reach first reproduction (one month in larval stage, 12 months in juvenile stage, and one additional month in fertility rate), in contrast to the target reproductive age of 12 months. 
+The authors used the FAS model for calculating the transition rates for juveniles. 
+We developed four stage-structured population models that gradually correct for some or all of these problems and three age-structured matrices, of which two include the original errors associated with the fertility coefficients (Supplementary Material). 
+We used the eight models to calculate $\lambda_1$, stable stage distribution, reproductive value, sensitivity and elasticity of $\lambda_1$ to stage-specific survival rate and fecundity, damping ratio, and generation time (Supplementary Material). 
 
-For American alligator populations, @Dunham2014 developed two stage-structured matrix population models to compare the status of northern and southern populations. 
+For American alligator populations, @Dunham2014 developed two stage-structured matrix population models to compare the status of northern and southern populations, which differed in stage durations and birth rates. 
 The original models consist of five stages (eggs, larvae, juvenile, subadults, and adults), and the time step of the model was one year.
 Similarly to the lionfish model, the alligator models were post-breeding census models, but the authors did not include the survival of adults in the fertility rate. 
 The first stage was egg stage, but it only lasted for three months; therefore, there was clear inconsistency in the time steps among stages. 
-@Dunham2014 used AAS model to calculate transition rates for juvenile and subadult stages.
-We developed two additional stage-structured models that corrects some or all of these problems and three age-structured matrices, of which two of them include the original errors associated with fertility coefficient, for each population. 
+@Dunham2014 used the AAS model to calculate transition rates for juvenile and subadult stages.
+We developed two additional stage-structured models that corrects some or all of these problems and three age-structured matrices, of which two include the original errors associated with the fertility coefficients, for each population. 
 The six population models for each population were used to calculate the same quantities that we calculated with the lionfish models (Supplementary Material). 
 
 
 ## Failure to include survival terms in the fertility coefficients
-The failure to include survival terms in the fertility coefficients will make those coefficients too large (since survival is less than one).
+Failing to include survival terms in the fertility coefficients will make those coefficients too large (since survival is less than one).
 This will lead to an overestimate of $\lambda_1$.
 This error most often occurs in postbreeding census models, and will be approximately
 
@@ -472,52 +472,52 @@ The effects of the missing fertility coefficient can be found by comparing model
 In all cases, the missing fertility coefficient caused the underestimation of asymptotic population growth rate (Figures S1 and S8), overestimation of adult stage distribution (Figures S2 and S9), and underestimation of adult reproductive value (Figures S3 and S10). 
 
 The effects of the missing fertility coefficient depend on the life history strategy of organisms. 
-For example, the effects were greater for the southern alligator population than northern alligator population because the duration from egg to adult stages was longer for northern population, causing less number of individuals to transition into adult stage each year, and the fecundity was lower for the northern population, causing less number of individuals to be born from each parent. 
+For example, the effects were greater for the southern alligator population than northern alligator population because the duration from egg to adult stages was longer for northern population, causing fewer individuals to transition into adult stage each year, and the fecundity was lower for the northern population, causing fewer individuals to be born from each parent. 
 Both of these would cause the reproduction in the first year to be smaller, reducing the effects of the missing fertility coefficient to be small. 
 The effects of the missing fertility coefficient is expected to be large for species for which the contribution of offspring from individuals reproducing the first time is large. 
 
 ## Failure to use AAS model for transition rate calculation
 
-If the stage durations are fixed, such that a Leslie matrix model, with all age classes within the stage having the same survival, is the best model, then only the AAS stage-structured model will give the correct $\lambda_1$ in general. 
+If the stage durations are fixed, such that a Leslie matrix model, with all age classes within the stage having the same survival, is the best model, then only the AAS stage-structured model will give the approximately correct $\lambda_1$ in general. 
 The SAS model will be correct only if $\lambda_1 = 1$; if $\lambda_1 >1$, then the maturation fraction will be too large and $\lambda_1$ will be overestimated; the opposite will be true if $\lambda_1 < 1$. 
 Thus the SAS model will bias $\lambda_1$ away from one. 
 The FAS model is similar, except that the critical value for $\lambda_1$ is $\sigma_i/T_i$ [CHECK]. 
 If there is more than one multi-timestep stage, with different critical values of $\lambda_1$, then the effects of the FAS model are unclear.
 The impact of using the observed transition rates is likely to be highly variable, depending on the nature of the deviations between the age structure when the population was observed and the asymptotic age structure.
 
-Use of different maturation models (Table 2) has substantial effects on demographic statistics, and these effects can be observed by comparing FAS model (L3), SAS model (L4), AAS model (L5), and age-structured model (L8) for lionfish populations. 
-The asymptotic population growth rate was substantially overestimated under FAS and SAS models compared with the AAS and age-structured models (Figure S1), with latter two having the same growth rate estimate. 
-Although stable stage distributions of adults under the four models appear similar (Figure S2), stable stage distributions of juveniles were underestimated with FAS and SAS models compared with the age structured models (Figure S2), suggesting the stable stage distribution of the larval stage was overestimated under the two stage-structured models. 
-The reproductive value of adults were substantially underestimated with FAS and SAS models compared with AAS or the age-structured models.
+Use of different maturation models (Table 2) has substantial effects on demographic statistics, and these effects can be observed by comparing the FAS (L3), SAS (L4), AAS (L5), and age-structured (L8) models for lionfish populations. 
+The asymptotic population growth rate was substantially overestimated under the FAS and SAS models compared with the AAS and age-structured models (Figure S1), with latter two having the same growth rate estimate. 
+Although the stable stage distributions of adults under the four models appear similar (Figure S2), the stable stage distributions of juveniles were underestimated with the FAS and SAS models compared with the age structured models (Figure S2), suggesting that the stable stage distribution of the larval stage was overestimated under the two stage-structured models. 
+The reproductive value of adults were substantially underestimated with the FAS and SAS models compared with the AAS or age-structured models.
 
-The original models for alligator populations used SAS model (A2 and A8 for the northern and southern populations after correcting other problems). 
-Therefore, we compared it with AAS model (A3 and A9 for the northern and southern populations, respectively) and age-structured models (A6 and A12 for the northern and southern populations, respectively). 
-Similarly to the lionfish models, AAS and age-structured models gave the same asymptotic population growth rate. 
-However, SAS models underestimated the population growth rate for the northern population, and overestimated it for the southern populations. 
+The original models for alligator populations used the SAS model (A2 and A8 for the northern and southern populations after correcting other problems). 
+Therefore, we compared it with the AAS model (A3 and A9 for the northern and southern populations, respectively) and the age-structured model (A6 and A12 for the northern and southern populations, respectively). 
+Similarly to the lionfish models, the AAS and age-structured models gave the same asymptotic population growth rate. 
+However, the SAS models underestimated the population growth rate for the northern population, and overestimated it for the southern populations. 
 This results from the fact the estimated population growth rate was below 1 for the northern population and above 1 for the southern population. 
 In other words, the SAS model would magnify the deviation in asymptotic population growth rate from 1. 
-When the asymptotic growth rate is less than 1, SAS model also underestimated adult stable stage distribution (Figure S9) and overestimated adult reproductive value (Figure S10). 
+When the asymptotic growth rate is less than 1, the SAS model also underestimated the adult stable stage distribution (Figure S9) and overestimated the adult reproductive value (Figure S10). 
 The opposite effects are observed when the asymptotic growth rate was greater than 1. 
 
 ## Effects on sensitivity, elasticity, damping ratio, and generation time
-The three common errors in constructing matrix population models can affect population growth rate, stable stage distribution, and reproductive value, which are the three basic statistics associated with a population matrix. 
-Calculating the sensitivity (or elasticity) of $\lambda_1$ to changes in matrix elements or underlying demographic parameters is often the primary goal of constructing and MPM, especially for management applications or studies of life history theory. 
+As described above, the three common errors in constructing matrix population models can affect population growth rate, stable stage distribution, and reproductive value, which are the three basic statistics associated with a population matrix. 
+Calculating the sensitivity (or elasticity) of $\lambda_1$ to changes in matrix elements or underlying demographic parameters is often the primary goal of constructing an MPM, especially for management applications or studies of life history theory. 
 Because the sensitivity and elasticity of the population growth rates to population parameters are functions of these basic statistics, they are also affected by the errors. 
 Predicting the effects of MPM construction errors requires information about the second derivative of $\lambda_1$ with respect to model parameters [@Caswell1996], the theory of which seems not to have been much developed. 
 In a Lefkovitch model, the second derivative of $\lambda_1$ with respect to diagonal matrix elements is positive, and with respect to off-diagonal elements seems to be generally negative [@McCarthy2008]. 
-This suggests that overestimates of the maturation rate should reduce the sensitivity of $\lambda_1$ to both stasis and growth terms, thus reducing the sensitivity of $\lambda_1$ to survival. 
+This suggests that overestimates of the maturation rate should reduce the sensitivity of $\lambda_1$ to both stasis and growth terms, thus reducing the overall sensitivity of $\lambda_1$ to survival. 
 In addition, failing to include survival terms in the fertility coefficients will necessarily lead to underestimates of the sensitivity (and elasticity) of $\lambda_1$ to survival.
 For lionfish population, the rank order of both sensitivity and elasticity among stages changed from L3 to L4 as we changed the way we calculate the transition rates (Figures S6).
 This implies that conservation strategy can be affected by the errors in developing a population matrix.   
 
 There are a variety of ways to define generation time in demographic studies [@Coale1972]. 
 In this study, we used the mean age of mothers to represent the generation time, applying formulas developed by @Bienvenu2015, which is a function of elasticity and fertility coefficients. 
-Therefore, any bias associated with these two quantities affect the estimated generation time (Figures S7 and S16).  
-We found substantial variations in the estimated generation time among the models.
-In addition to the errors in constructing matrix population models, estimated generation time in general tends to be biased with stage-structured models [@Fujiwara2017].
+Therefore, any bias associated with these two quantities affect the estimated generation time (Figures S7 and S16). 
+We found substantial and variable impacts of MPM construction errors on the estimated generation time.
+In addition, estimated generation time in general tends to be biased with stage-structured models [@Fujiwara2017].
 These results suggest the calculation of generation time needs to be done carefully. 
 
-Damping ratio is given by $\lambda_1/\left|\lambda_2\right|$, where $\lambda_1$  is the eigenvalue of the largest magnitude and $\lambda_2$  is that of the second largest, and it measures how quickly transient dynamics dissipate over time. 
+The damping ratio is given by $\lambda_1/\left|\lambda_2\right|$, where $\lambda_1$  is the eigenvalue of the largest magnitude and $\lambda_2$  is that of the second largest, and it measures how quickly transient dynamics dissipate over time. 
 If $\lambda_2$ were not affected by the errors in constructing population matrices, then the damping ratio and the asymptotic population growth rate should correlate with each other. 
 The fact they deviate from each other (cf. Figures S1 and S5,  Figures S8 and S15) suggests the estimation of $\lambda_2$ is also affected by the errors in constructing population matrices. 
 
@@ -554,7 +554,7 @@ For each of the three classes of errors, we calculated the overall percentage of
 We also used logistic regression of error classification against publication year to examine whether these errors had become more or less frequent over time.
 
 ## Results
-*Note: The data collection by the Compadrinos is ongoing. Here we report an analysis based on data collected for the initial feasibility study for the project. The publications are recent and haphazardly chosen, but for this preliminary review we have analyzed and presented these data in the same form that we plan for the final dataset.*
+*Note: The data collection by the Compadrinos is ongoing. Here we report an analysis based on data collected for the initial feasibility study for the project.*
 
 ```{r get_data}
 library(xlsx)
