paragraphs on expert recommendation

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -23,7 +23,7 @@ publisher = {Sinauer Associates},
 address = {Sunderland, MA}, 
 year = {2002}, 
 abstract = {}, 
-keywords = {}}
+url = {http://books.google.com/books?id=8Z6GQgAACAAJ\&printsec=frontcover}}
 
 @Article{Salguero-Gomez2015,
 author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Buckley, Y. M. and Che-Castaldo, J. and Caswell, H. and Hodgson, D. and Scheuerlein, A. and Conde, D. A. and Brinks, E. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Runge, J. and Ruoff, T. and Wille, J. and Zeh, S. and Davison, R. and Vieregg, D. and Baudisch, A. and Altwegg, R. and Colchero, F. and Dong, M. and de Kroon, H. and Lebreton, J.-D. and Metcalf, C. J. E. and Neel, M. M. and Parker, I. M. and Takada, T. and Valverde, T. and V{\'e}lez-Espino, L. A. and Wardle, G. M. and Franco, M. and Vaupel, J. W. }, 
@@ -106,7 +106,7 @@ publisher = {Sinauer},
 address = {Sunderland, MA}, 
 year = {1989}, 
 abstract = {}, 
-keywords = {}}
+url = {}}
 
 @Article{Bienvenu2015,
 author = {Bienvenu, F. and Legendre, S. }, 
@@ -147,7 +147,7 @@ publisher = {Sinauer Associates},
 address = {Sunderland, MA}, 
 year = {2001}, 
 abstract = {}, 
-keywords = {}}
+url = {}}
 
 @Article{Salguero-Gomez2016a,
 author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Jongejans, E. and Blomberg, S. P. and Hodgson, D. J. and Mbeau-Ache, C. and Zuidema, P. A. and de Kroon, H. and Buckley, Y. M. }, 
@@ -202,7 +202,7 @@ publisher = {Princeton University Press},
 address = {Princeton, NJ, USA}, 
 year = {1972}, 
 abstract = {}, 
-keywords = {}}
+url = {}}
 
 @Article{Lefkovitch1965,
 author = {Lefkovitch, L. P. }, 
@@ -243,7 +243,7 @@ publisher = {Academic Press},
 address = {San Diego, CA}, 
 year = {1998}, 
 abstract = {Book Description: This text/reference addresses the ever-increasing challenges of documenting population demographic changes, and will serve as a bridge from introductory ecology to both applied and theoretical demography. It emphasizes the analysis of population data taken from a wide variety of organisms, including terrestrial and aquatic plants and animals found in habitats from equatorial rain forests to the arctic tundra. The book also contains computer programs that are written in BASIC and include tools for population projection, matrix analysis using both sensitivity and elasticity, individual growth and survival models, and the analysis of size-frequency distributions. Key Features * Includes BASIC programs for analysis of capture-recapture data, matrices, growth models, size-frequency distribution, survival models, and many others * Contains worked examples from a wide range of animals and plants * Emphasizes actual data}, 
-keywords = {}}
+url = {https://www.amazon.com/Plant-Animal-Populations-Methods-Demography/dp/0122287401?SubscriptionId=0NM5T5X751JWT17C4GG2\&tag=sonnysoftware\&linkCode=xm2\&camp=2025\&creative=165953\&creativeASIN=0122287401}}
 
 @Article{Caswell1996,
 author = {Caswell, H. }, 
@@ -284,7 +284,7 @@ publisher = {Kluwer Academic Publishers},
 address = {Norwell, MA}, 
 year = {1995}, 
 abstract = {}, 
-keywords = {}}
+url = {}}
 
 @Incollection{Meyer2003a,
 author = {Meyer, J. H. F. and Land, R. }, 
@@ -321,7 +321,7 @@ publisher = {Blackwell},
 address = {Malden, MA}, 
 year = {2007}, 
 abstract = {}, 
-keywords = {}}
+url = {https://www.amazon.com/Conservation-Wildlife-Populations-Demography-Management/dp/0470671491\%3FSubscriptionId\%3D0NM5T5X751JWT17C4GG2\%26linkCode\%3Dxm2\%26camp\%3D2025\%26creative\%3D165953\%26creativeASIN\%3D0470671491}}
 
 @Article{Cousin2006,
 author = {Cousin, G. }, 
@@ -333,6 +333,61 @@ pages = {4-5},
 year = {2006}, 
 abstract = {}, 
 doi = {10.11120/plan.2006.00170004}, 
+location = {}, 
+keywords = {}}
+
+
+@Report{Kendall2018a,
+author = {Kendall, B. E. }, 
+title = {mpmtools: Tools for Building and Analyzing Matrix Population Models}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {R package version 0.1.0}, 
+address = {https://github.com/BruceKendall/mpmtools}, 
+year = {2018}, 
+abstract = {}, 
+url = {https://github.com/BruceKendall/mpmtools}}
+
+@Article{Muller2008a,
+author = {Muller, D. A. and Sharma, M. D. and Reimann, P. }, 
+title = {{Raising cognitive load with linear multimedia to promote conceptual change}}, 
+journal = {Sci. Ed.}, 
+volume = {92}, 
+issue = {2}, 
+pages = {278-296}, 
+year = {2008}, 
+abstract = {}, 
+doi = {10.1002/sce.20244}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Muller2008,
+author = {Muller, D. A. and Bewes, J. and Sharma, M. D. and Reimann, P. }, 
+title = {{Saying the wrong thing: improving learning with multimedia by including misconceptions: Misconception-based multimedia instruction}}, 
+journal = {Journal of Computer Assisted Learning}, 
+volume = {24}, 
+issue = {2}, 
+pages = {144-155}, 
+year = {2008}, 
+abstract = {}, 
+doi = {10.1111/j.1365-2729.2007.00248.x}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Stubben2007,
+author = {Stubben, C. and Milligan, B. }, 
+title = {{Estimating and Analyzing Demographic Models Using the popbio Package in R}}, 
+journal = {J. Stat. Soft.}, 
+volume = {22}, 
+issue = {}, 
+pages = {11}, 
+year = {2007}, 
+abstract = {}, 
+doi = {10.18637/jss.v022.i11}, 
 location = {}, 
 keywords = {}}
 
